--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "yarn start --prefix client",
+    "server": "nodemon server.js --ignore client",
+    "client": "npm start --prefix client",
     "dev": "(cd client && npm start) & npm run server"
   },
   "keywords": [],
