--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server": "nodemon server.js --ignore client",
     "client": "npm start --prefix client",
     "dev": "(cd client && npm start) & npm run server",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION= false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild":
+    "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
